@@ -31,6 +31,10 @@ xxx xxx xx xx:xx:xx UTC 2010
         - monotone no longer saves changed options from the command line back
           to _MTN/options in case the command execution was unsuccessful.
 
+        - The 'log' command no longer crashes if it is executed in a workspace
+          whose parent revision(s) do not exist in the specified database
+          (fixes monotone bug #29677).
+
         - In 0.46, spurious network disconnects could occur when transferring
           sufficiently large items (files, diffs, revisions). This was fixed
           in 0.47 but not noted in the release notes at that time
